# mossy

./: .gitignore  Cargo.toml  README.md  a.out  a.s  test.c
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: test.yml
cli/: Cargo.toml
cli/src/: main.rs
codegen/: Cargo.toml
codegen/src/: lib.rs
codegen/src/stage/codegen/: mod.rs
codegen/src/stage/type_check/: mod.rs  scopes.rs
core/: Cargo.toml
core/src/: lib.rs  util.rs
core/src/lexer/: mod.rs
core/src/parser/: ast.rs  mod.rs
core/src/stage/codegen/: register.rs
core/src/stage/type_check/: mod.rs  scopes.rs
lr_parser/: Cargo.toml
lr_parser/src/: lib.rs
lr_parser/src/lexer/: mod.rs
parser/: Cargo.toml
parser/src/: lib.rs
parser/src/lexer/: mod.rs
parser/src/parser/: ast.rs  mod.rs
parser/src/preprocessor/: mod.rs
src/: env.rs  lib.rs  main.rs  util.rs
src/ast/: interpret.rs  kinded.rs  mod.rs  typing.rs
src/codegen/: allocator.rs  mod.rs  register.rs  register_allocation.rs  type_pass.rs
src/codegen/machine/arch/: x86_64.rs
src/lexer/: mod.rs  rewrite.rs  stack.rs
src/machine/: arch.rs
src/parser/: ast.rs  c.pest  grammar.rs  mod.rs  token_parser.rs  type_pass.rs
src/pass/: mod.rs  type_pass.rs
src/pass/type_pass/: mod.rs  scopes.rs
src/preprocessor/: mod.rs
src/scanner/: mod.rs  tokens.rs
src/stage/: mod.rs
src/stage/ast/: mod.rs
src/stage/slotted_type_check/: mod.rs  scopes.rs
src/stage/slotted_type_check/ast/: mod.rs
src/stage/type_check/: mod.rs  scopes.rs
src/stage/type_check/ast/: mod.rs
src/stage/type_pass/: mod.rs
(+11 files in other folders)
