[package]
name = "mossy"
version = "0.1.0"
authors = ["Nate Catelli <ncatelli@packetfire.org>"]
edition = "2018"

[profile.release]
lto = true

[dependencies]
cranelift = "0.69.0"
cranelift-module = "0.69.0"
cranelift-object = "0.69.0"
cranelift-codegen = "0.69.0"
target-lexicon = "0.11.2"
parcel = { git = "https://github.com/ncatelli/parcel", tag = "v2.0.0" }
