[package]
name = "mossy"
version = "0.1.0"
authors = ["Nate Catelli <ncatelli@packetfire.org>"]
edition = "2018"

[profile.release]
lto = true

[dependencies]
parcel = { git = "https://github.com/ncatelli/parcel", tag = "v2.0.1" }
scrap = { git = "https://github.com/ncatelli/scrap", branch = "main" }
